--- a/apps/func-migration-v3-import/package.json
+++ b/apps/func-migration-v3-import/package.json
@@ -9,31 +9,30 @@
   ],
   "dependencies": {
     "@azure/functions": "4.5.1",
-    "@azure/storage-blob": "12.24.0",
+    "@azure/storage-blob": "12.25.0",
     "@klicker-uzh/prisma": "workspace:*",
-    "axios": "1.4.0",
+    "axios": "1.7.7",
     "jsonwebtoken": "9.0.2",
     "mongoose": "7.3.3",
-    "uuid": "9.0.1"
+    "uuid": "10.0.0"
   },
   "devDependencies": {
-    "@tsconfig/node18": "18.2.0",
-    "@types/jsonwebtoken": "^9.0.6",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20.16.1",
-    "@types/uuid": "^9.0.8",
-    "azure-functions-core-tools": "4.0.5907",
-    "cross-env": "7.0.3",
-    "eslint": "8.45.0",
-    "npm-run-all": "4.1.5",
-    "prisma": "5.18.0",
-    "ts-node": "10.9.1",
-    "tsup": "7.2.0",
-    "typescript": "5.4.5"
+    "@types/uuid": "^10.0.0",
+    "azure-functions-core-tools": "~4.0.6280",
+    "cross-env": "~7.0.3",
+    "eslint": "~8.45.0",
+    "npm-run-all": "~4.1.5",
+    "prisma": "~5.21.0",
+    "tsup": "~8.3.0",
+    "tsx": "~4.19.1",
+    "typescript": "~5.6.3"
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production tsup",
     "check": "tsc --noEmit",
-    "dev:copy": "ts-node src/copy.ts",
+    "dev:copy": "tsx src/copy.ts",
     "dev:func": "func start -p 7075 --verbose --javascript",
     "dev:function": "run-p dev:func dev:ts",
     "dev:migration": "run-s dev:copy dev:function",
