--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -2,101 +2,92 @@
   "name": "@klicker-uzh/graphql",
   "version": "3.3.0-alpha.2",
   "license": "AGPL-3.0",
-  "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
   "dependencies": {
-    "@azure/service-bus": "7.9.0",
-    "@azure/storage-blob": "12.15.0",
+    "@azure/service-bus": "7.9.5",
+    "@azure/storage-blob": "12.25.0",
     "@klicker-uzh/grading": "workspace:*",
     "@klicker-uzh/prisma": "workspace:*",
     "@klicker-uzh/util": "workspace:*",
-    "@pothos/core": "3.38.0",
-    "@pothos/plugin-directives": "3.10.2",
-    "@pothos/plugin-prisma": "3.60.0",
-    "@pothos/plugin-scope-auth": "3.20.0",
-    "@pothos/plugin-validation": "3.10.0",
-    "axios": "1.4.0",
+    "@pothos/core": "4.3.0",
+    "@pothos/plugin-directives": "4.1.0",
+    "@pothos/plugin-prisma": "4.2.1",
+    "@pothos/plugin-scope-auth": "4.1.0",
+    "@pothos/plugin-zod": "4.1.0",
+    "axios": "1.7.7",
     "bcryptjs": "2.4.3",
-    "dayjs": "1.11.12",
-    "generate-password": "1.7.0",
+    "dayjs": "1.11.13",
+    "generate-password": "1.7.1",
     "graphql": "16.9.0",
-    "graphql-scalars": "1.22.2",
+    "graphql-scalars": "1.23.0",
     "graphql-yoga": "3.9.1",
     "jsonwebtoken": "9.0.2",
     "mathjs": "11.9.1",
     "mongodb": "5.7.0",
     "node-schedule": "2.1.1",
-    "nodemailer": "6.9.14",
-    "ramda": "0.29.0",
+    "nodemailer": "6.9.15",
+    "remeda": "2.15.0",
     "unique-names-generator": "4.7.1",
-    "uuid": "9.0.1",
-    "validator": "13.11.0",
-    "zod": "3.21.4"
+    "uuid": "10.0.0",
+    "validator": "13.12.0",
+    "zod": "3.23.8"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "5.0.0",
-    "@graphql-codegen/fragment-matcher": "5.0.0",
-    "@graphql-codegen/introspection": "4.0.0",
-    "@graphql-codegen/schema-ast": "4.0.0",
-    "@graphql-codegen/typed-document-node": "5.0.1",
-    "@graphql-codegen/typescript": "4.0.1",
-    "@graphql-codegen/typescript-operations": "4.0.1",
-    "@graphql-codegen/typescript-resolvers": "4.0.1",
-    "@graphql-tools/utils": "10.0.6",
-    "@graphql-typed-document-node/core": "3.2.0",
-    "@istanbuljs/nyc-config-typescript": "1.0.2",
-    "@parcel/watcher": "2.2.0",
-    "@size-limit/preset-small-lib": "8.2.4",
-    "@types/bcryptjs": "^2.4.2",
+    "@graphql-codegen/cli": "~5.0.3",
+    "@graphql-codegen/fragment-matcher": "~5.0.2",
+    "@graphql-codegen/introspection": "~4.0.3",
+    "@graphql-codegen/schema-ast": "~4.1.0",
+    "@graphql-codegen/typed-document-node": "~5.0.10",
+    "@graphql-codegen/typescript": "~4.1.0",
+    "@graphql-codegen/typescript-operations": "~4.3.0",
+    "@graphql-codegen/typescript-resolvers": "~4.3.0",
+    "@graphql-tools/utils": "~10.5.5",
+    "@graphql-typed-document-node/core": "~3.2.0",
+    "@istanbuljs/nyc-config-typescript": "~1.0.2",
+    "@parcel/watcher": "~2.4.1",
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.3",
-    "@types/jsonwebtoken": "^9.0.6",
+    "@types/jest": "^29.5.13",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20.16.1",
-    "@types/node-schedule": "^2.1.0",
-    "@types/nodemailer": "^6.4.15",
-    "@types/ramda": "^0.29.3",
-    "@types/uuid": "^9.0.8",
-    "@types/validator": "^13.9.0",
+    "@types/node-schedule": "^2.1.7",
+    "@types/nodemailer": "^6.4.16",
+    "@types/uuid": "^10.0.0",
+    "@types/validator": "^13.12.2",
     "@types/web-push": "^3.6.3",
-    "cross-env": "7.0.3",
-    "dotenv": "16.4.5",
-    "eslint": "8.45.0",
-    "graphql-codegen-persisted-query-ids": "0.2.0",
-    "ioredis": "5.3.2",
-    "jest": "29.5.0",
-    "npm-run-all": "4.1.5",
-    "nyc": "15.1.0",
-    "size-limit": "8.2.4",
-    "source-map-support": "0.5.21",
-    "ts-jest": "29.1.0",
-    "ts-node": "10.9.1",
-    "ts-node-dev": "2.0.0",
-    "tsup": "7.2.0",
-    "tsx": "4.9.1",
-    "typescript": "5.4.5",
-    "web-push": "3.6.7"
+    "cross-env": "~7.0.3",
+    "dotenv": "~16.4.5",
+    "eslint": "~8.45.0",
+    "graphql-codegen-persisted-query-ids": "~0.2.0",
+    "ioredis": "~5.4.1",
+    "jest": "~29.7.0",
+    "npm-run-all": "~4.1.5",
+    "nyc": "~17.1.0",
+    "ts-jest": "~29.2.5",
+    "tsup": "~8.3.0",
+    "tsx": "~4.19.1",
+    "typescript": "~5.6.3",
+    "web-push": "~3.6.7"
   },
   "scripts": {
-    "analyze": "size-limit --why",
     "build": "cross-env NODE_ENV=production run-s generate build:ts",
-    "build:ts": "tsup --dts",
-    "build:test": "run-s build:instrument build",
     "build:instrument": "nyc instrument --compact=false src instrumented",
+    "build:test": "run-s build:instrument build",
+    "build:ts": "tsup --dts",
     "check": "tsc --noEmit",
     "dev": "npm-run-all --parallel dev:graphql dev:ts",
     "dev:doppler": "doppler run --config dev -- pnpm run dev",
-    "dev:test": "pnpm run dev",
     "dev:graphql": "doppler run --config dev -- graphql-codegen --config codegen.ts --watch 'src/**.graphql' --watch 'src/**.ts'",
     "dev:offline": "pnpm run dev",
+    "dev:test": "pnpm run dev",
     "dev:ts": "cross-env NODE_ENV=development doppler run --config dev -- tsup --watch --dts",
     "generate": "graphql-codegen --config codegen.ts",
     "script": "ENV=development doppler run --config dev -- tsx",
     "script:prod": "ENV=production doppler run --config prd -- tsx",
-    "size": "size-limit",
     "test": "jest"
   },
   "engines": {
@@ -105,14 +96,5 @@
   "volta": {
     "extends": "../../package.json"
   },
-  "size-limit": [
-    {
-      "path": "dist/index.js",
-      "limit": "10 KB"
-    },
-    {
-      "path": "dist/ops.js",
-      "limit": "10 KB"
-    }
-  ]
+  "type": "module"
 }
