--- a/packages/shared-components/package.json
+++ b/packages/shared-components/package.json
@@ -6,46 +6,45 @@
   "devDependencies": {
     "@klicker-uzh/graphql": "workspace:*",
     "@klicker-uzh/markdown": "workspace:*",
-    "@tailwindcss/aspect-ratio": "0.4.2",
-    "@tailwindcss/forms": "0.5.4",
-    "@tailwindcss/typography": "0.5.9",
-    "@types/js-cookie": "^3.0.3",
-    "@types/lodash": "^4.14.196",
+    "@tailwindcss/aspect-ratio": "~0.4.2",
+    "@tailwindcss/forms": "~0.5.9",
+    "@tailwindcss/typography": "~0.5.15",
+    "@types/js-cookie": "^3.0.6",
+    "@types/lodash": "^4.17.10",
     "@types/node": "^20.16.1",
-    "@types/ramda": "^0.29.3",
-    "@types/react": "^18.3.4",
-    "@types/react-dom": "^18.3.0",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.45.0",
-    "lodash": "4.17.21",
-    "npm-run-all": "4.1.5",
-    "postcss-import": "16.1.0",
-    "recharts": "2.7.2",
-    "remark-parse": "10.0.2",
-    "remark-slate": "1.8.6",
-    "tailwindcss": "3.4.9",
-    "tailwindcss-radix": "3.0.3",
-    "typescript": "5.4.5",
-    "unified": "10.1.2"
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.1",
+    "autoprefixer": "~10.4.20",
+    "eslint": "~8.45.0",
+    "lodash": "~4.17.21",
+    "npm-run-all": "~4.1.5",
+    "postcss-import": "~16.1.0",
+    "recharts": "~2.13.0",
+    "remark-parse": "~10.0.2",
+    "remark-slate": "~1.8.6",
+    "tailwindcss": "~3.4.14",
+    "tailwindcss-radix": "~3.0.5",
+    "typescript": "~5.6.3",
+    "unified": "~10.1.2"
   },
   "peerDependencies": {
-    "@fortawesome/fontawesome-svg-core": "6.6.0",
-    "@fortawesome/free-regular-svg-icons": "6.6.0",
-    "@fortawesome/free-solid-svg-icons": "6.6.0",
-    "@fortawesome/react-fontawesome": "0.2.2",
-    "@uzh-bf/design-system": "3.0.0-alpha.32",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@klicker-uzh/graphql": "workspace:*",
     "@klicker-uzh/markdown": "workspace:*",
-    "dayjs": "1.11.12",
-    "formik": "2.4.6",
-    "js-cookie": "3.0.5",
-    "localforage": "1.10.0",
-    "next": "14.2.7",
-    "next-intl": "3.18.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "tailwind-merge": "2.4.0",
-    "yup": "1.2.0"
+    "@uzh-bf/design-system": "3.0.0-alpha.32",
+    "dayjs": "^1.11.13",
+    "formik": "^2.4.6",
+    "js-cookie": "^3.0.5",
+    "localforage": "^1.10.0",
+    "next": "^14.2.15",
+    "next-intl": "^3.21.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwind-merge": "^2.5.4",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "build": "run-p build:tw:*",
