--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -9,37 +9,37 @@
     "@klicker-uzh/shared-components": "workspace:*",
     "@next-auth/prisma-adapter": "1.0.7",
     "@uzh-bf/design-system": "3.0.0-alpha.32",
-    "axios": "1.4.0",
+    "axios": "1.7.7",
     "bcryptjs": "2.4.3",
     "js-cookie": "3.0.5",
     "jsonwebtoken": "9.0.2",
     "localforage": "1.10.0",
-    "next": "14.2.7",
-    "next-auth": "4.24.5",
-    "next-intl": "3.18.1",
+    "next": "14.2.15",
+    "next-auth": "4.24.8",
+    "next-intl": "3.21.1",
     "nookies": "2.5.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "sharp": "0.32.4",
-    "tailwind-merge": "2.4.0"
+    "sharp": "0.33.5",
+    "tailwind-merge": "2.5.4"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/js-cookie": "^3.0.3",
-    "@types/jsonwebtoken": "^9.0.6",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/js-cookie": "^3.0.6",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20.16.1",
-    "@types/react": "^18.3.4",
-    "@types/react-dom": "^18.3.0",
-    "autoprefixer": "10.4.14",
-    "cross-env": "7.0.3",
-    "cssnano": "6.0.1",
-    "eslint": "8.45.0",
-    "eslint-config-next": "14.2.7",
-    "postcss": "8.4.41",
-    "postcss-import": "16.1.0",
-    "prisma": "5.18.0",
-    "tailwindcss": "3.4.9",
-    "typescript": "5.4.5"
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.1",
+    "autoprefixer": "~10.4.20",
+    "cross-env": "~7.0.3",
+    "cssnano": "~6.0.1",
+    "eslint": "~8.45.0",
+    "eslint-config-next": "~14.2.15",
+    "postcss": "~8.4.47",
+    "postcss-import": "~16.1.0",
+    "prisma": "~5.21.0",
+    "tailwindcss": "~3.4.14",
+    "typescript": "~5.6.3"
   },
   "scripts": {
     "build": "next build",
