--- a/apps/backend-docker/package.json
+++ b/apps/backend-docker/package.json
@@ -2,7 +2,6 @@
   "name": "@klicker-uzh/backend-docker",
   "version": "3.3.0-alpha.2",
   "license": "AGPL-3.0",
-  "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -19,83 +18,81 @@
     "@graphql-yoga/redis-event-target": "1.0.0",
     "@klicker-uzh/graphql": "workspace:*",
     "@klicker-uzh/prisma": "workspace:*",
-    "@opentelemetry/exporter-trace-otlp-http": "0.52.1",
-    "@opentelemetry/instrumentation": "0.52.1",
-    "@opentelemetry/resources": "1.25.1",
-    "@opentelemetry/sdk-trace-base": "1.25.1",
-    "@opentelemetry/sdk-trace-node": "1.25.1",
-    "@opentelemetry/semantic-conventions": "1.25.1",
-    "@prisma/extension-optimize": "0.10.1",
-    "@prisma/instrumentation": "5.18.0",
+    "@opentelemetry/exporter-trace-otlp-http": "0.53.0",
+    "@opentelemetry/instrumentation": "0.53.0",
+    "@opentelemetry/resources": "1.26.0",
+    "@opentelemetry/sdk-trace-base": "1.26.0",
+    "@opentelemetry/sdk-trace-node": "1.26.0",
+    "@opentelemetry/semantic-conventions": "1.27.0",
+    "@prisma/extension-optimize": "1.0.1",
+    "@prisma/instrumentation": "5.21.0",
     "@sentry/node": "7.103.0",
-    "@sentry/tracing": "7.52.1",
-    "cookie-parser": "1.4.6",
+    "@sentry/tracing": "7.114.0",
+    "cookie-parser": "1.4.7",
     "cors": "2.8.5",
-    "express": "4.18.2",
+    "express": "4.21.1",
     "graphql": "16.9.0",
-    "graphql-ws": "5.13.1",
+    "graphql-ws": "5.16.0",
     "graphql-yoga": "3.9.1",
-    "ioredis": "5.3.2",
+    "ioredis": "5.4.1",
     "jsonwebtoken": "9.0.2",
-    "next-auth": "4.24.5",
-    "passport": "0.6.0",
+    "next-auth": "4.24.8",
+    "passport": "0.7.0",
     "passport-jwt": "4.0.1",
-    "ramda": "0.29.0",
-    "ws": "8.13.0"
+    "ws": "8.18.0"
   },
   "devDependencies": {
-    "@cypress/code-coverage": "3.12.44",
-    "@istanbuljs/nyc-config-typescript": "1.0.2",
-    "@types/cookie-parser": "^1.4.3",
-    "@types/cors": "^2.8.12",
+    "@cypress/code-coverage": "~3.13.4",
+    "@istanbuljs/nyc-config-typescript": "~1.0.2",
+    "@types/cookie-parser": "^1.4.7",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.17",
-    "@types/ioredis-mock": "^8.2.1",
-    "@types/jest": "^29.5.3",
-    "@types/jsonwebtoken": "^9.0.6",
+    "@types/ioredis-mock": "^8.2.5",
+    "@types/jest": "^29.5.13",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20.16.1",
-    "@types/passport": "^1.0.10",
-    "@types/passport-jwt": "^3.0.6",
-    "@types/ramda": "^0.29.3",
-    "@types/ws": "^8.5.9",
+    "@types/passport": "^1.0.16",
+    "@types/passport-jwt": "^4.0.1",
+    "@types/ws": "^8.5.12",
     "@uzh-bf/design-system": "3.0.0-alpha.32",
-    "axios": "1.4.0",
-    "cross-env": "7.0.3",
-    "dotenv": "16.4.5",
-    "eslint": "8.45.0",
-    "ioredis-mock": "8.7.0",
-    "jest": "29.5.0",
-    "nodemon": "3.0.1",
-    "npm-run-all": "4.1.5",
-    "nyc": "15.1.0",
-    "prisma": "5.18.0",
-    "source-map-support": "0.5.21",
-    "ts-node": "10.9.1",
-    "tsup": "7.2.0",
-    "tsx": "4.9.1",
-    "typescript": "5.4.5"
+    "axios": "~1.7.7",
+    "cross-env": "~7.0.3",
+    "dotenv": "~16.4.5",
+    "eslint": "~8.45.0",
+    "ioredis-mock": "~8.9.0",
+    "jest": "~29.7.0",
+    "nodemon": "~3.1.7",
+    "npm-run-all": "~4.1.5",
+    "nyc": "~17.1.0",
+    "prisma": "~5.21.0",
+    "source-map-support": "~0.5.21",
+    "tsup": "~8.3.0",
+    "tsx": "~4.19.1",
+    "typescript": "~5.6.3"
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production run-s build:ts",
-    "build:ts": "tsup",
-    "build:test": "run-s build:instrument build:ts",
     "build:instrument": "nyc instrument --compact=false src instrumented",
+    "build:test": "run-s build:instrument build:ts",
+    "build:ts": "tsup",
     "check": "tsc --noEmit",
     "dev": "npm-run-all --parallel dev:build dev:run",
-    "dev:lti": "pnpm run dev",
-    "dev:doppler": "doppler run --config dev -- pnpm run dev",
     "dev:build": "tsup --watch",
+    "dev:doppler": "doppler run --config dev -- pnpm run dev",
+    "dev:lti": "pnpm run dev",
     "dev:offline": "pnpm run dev",
-    "dev:test": "cross-env NODE_ENV=test pnpm run dev",
     "dev:run": "nodemon -w dist/ -w '../../packages/graphql/dist' --exec 'node ./dist/index.js'",
-    "start": "node -r dotenv/config dist/index.js",
-    "start:test": "nyc --silent node -r dotenv/config dist/index.js",
+    "dev:test": "cross-env NODE_ENV=test pnpm run dev",
     "script": "doppler run --config dev -- tsx",
-    "script:prod": "doppler run --config prd -- tsx"
+    "script:prod": "doppler run --config prd -- tsx",
+    "start": "node -r dotenv/config dist/index.js",
+    "start:test": "nyc --silent node -r dotenv/config dist/index.js"
   },
   "engines": {
     "node": "=20"
   },
   "volta": {
     "extends": "../../package.json"
-  }
+  },
+  "type": "module"
 }
