--- a/apps/func-incoming-responses/package.json
+++ b/apps/func-incoming-responses/package.json
@@ -8,24 +8,22 @@
     "dist/"
   ],
   "dependencies": {
-    "@azure/functions": "4.1.0",
-    "@azure/service-bus": "7.9.0",
+    "@azure/functions": "4.5.1",
+    "@azure/service-bus": "7.9.5",
     "@sentry/node": "7.103.0",
     "jsonwebtoken": "9.0.2"
   },
   "devDependencies": {
-    "@tsconfig/node18": "18.2.0",
-    "@tsconfig/recommended": "^1.0.2",
-    "@types/jsonwebtoken": "^9.0.6",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20.16.1",
     "@uzh-bf/design-system": "3.0.0-alpha.32",
-    "azure-functions-core-tools": "4.0.5801",
-    "cross-env": "7.0.3",
-    "dotenv": "16.4.5",
-    "eslint": "8.45.0",
-    "npm-run-all": "4.1.5",
-    "tsup": "7.2.0",
-    "typescript": "5.4.5"
+    "azure-functions-core-tools": "~4.0.6280",
+    "cross-env": "~7.0.3",
+    "dotenv": "~16.4.5",
+    "eslint": "~8.45.0",
+    "npm-run-all": "~4.1.5",
+    "tsup": "~8.3.0",
+    "typescript": "~5.6.3"
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production tsup",
