--- a/apps/func-migration-v2-export/package.json
+++ b/apps/func-migration-v2-export/package.json
@@ -9,22 +9,20 @@
   ],
   "dependencies": {
     "@azure/functions": "4.5.1",
-    "@azure/storage-blob": "12.24.0",
-    "axios": "1.4.0",
+    "@azure/storage-blob": "12.25.0",
+    "axios": "1.7.7",
     "jsonwebtoken": "9.0.2",
     "mongodb": "5.7.0"
   },
   "devDependencies": {
-    "@tsconfig/node18": "18.2.0",
-    "@tsconfig/recommended": "^1.0.2",
-    "@types/jsonwebtoken": "^9.0.6",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20.16.1",
-    "azure-functions-core-tools": "4.0.5907",
-    "cross-env": "7.0.3",
-    "eslint": "8.45.0",
-    "npm-run-all": "4.1.5",
-    "tsup": "7.2.0",
-    "typescript": "5.4.5"
+    "azure-functions-core-tools": "~4.0.6280",
+    "cross-env": "~7.0.3",
+    "eslint": "~8.45.0",
+    "npm-run-all": "~4.1.5",
+    "tsup": "~8.3.0",
+    "typescript": "~5.6.3"
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production tsup",
