--- a/apps/lti/package.json
+++ b/apps/lti/package.json
@@ -2,7 +2,6 @@
   "name": "@klicker-uzh/lti-service",
   "version": "3.1.2-rc.2",
   "license": "AGPL-3.0",
-  "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -11,26 +10,27 @@
   "dependencies": {
     "cross-env": "7.0.3",
     "jsonwebtoken": "9.0.2",
-    "ltijs": "5.9.4",
+    "ltijs": "5.9.5",
     "ltijs-sequelize": "2.4.4"
   },
   "devDependencies": {
     "@types/ltijs": "^4.0.11",
     "@types/node": "^20.16.1",
-    "nodemon": "3.0.1",
-    "npm-run-all": "4.1.5",
-    "tsup": "7.2.0",
-    "typescript": "5.4.5"
+    "nodemon": "~3.1.7",
+    "npm-run-all": "~4.1.5",
+    "tsup": "~8.3.0",
+    "typescript": "~5.6.3"
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production pnpm run build:ts",
     "build:ts": "tsup",
     "check": "tsc --noEmit",
-    "dev:lti": "npm-run-all --parallel dev:build dev:run",
-    "dev:doppler": "doppler run --config dev -- pnpm run dev:lti",
     "dev:build": "tsup --watch",
-    "dev:test": "cross-env NODE_ENV=test pnpm run dev",
+    "dev:doppler": "doppler run --config dev -- pnpm run dev:lti",
+    "dev:lti": "npm-run-all --parallel dev:build dev:run",
+    "dev:offline": "pnpm run dev",
     "dev:run": "nodemon -w dist/ --exec 'node ./dist/index.js'",
+    "dev:test": "cross-env NODE_ENV=test pnpm run dev",
     "start": "node dist/index.js"
   },
   "engines": {
@@ -38,5 +38,6 @@
   },
   "volta": {
     "extends": "../../package.json"
-  }
+  },
+  "type": "module"
 }
