--- a/apps/lti/tsconfig.json
+++ b/apps/lti/tsconfig.json
@@ -1,7 +1,6 @@
 {
   "include": ["**/**/*"],
   "compilerOptions": {
-    "baseUrl": ".",
     /* Base Options: */
     "esModuleInterop": true,
     "skipLibCheck": true,
@@ -19,14 +18,7 @@
     "module": "NodeNext",
     "outDir": "dist",
     "sourceMap": true,
-    /* AND if you're building for a library: */
-    "declaration": true,
-    /* AND if you're building for a library in a monorepo: */
-    "composite": true,
-    "declarationMap": true,
     /* If your code doesn't run in the DOM: */
-    "lib": ["es2022"],
-    "rootDir": "."
-  },
-  "exclude": ["src/prisma/client", "src/scripts", "dist"]
+    "lib": ["es2022"]
+  }
 }
