--- a/cypress/package.json
+++ b/cypress/package.json
@@ -2,16 +2,15 @@
   "private": true,
   "name": "@klicker-uzh/cypress",
   "devDependencies": {
-    "@cypress/code-coverage": "3.12.44",
-    "@testing-library/cypress": "10.0.2",
-    "@types/jsonwebtoken": "^9.0.6",
+    "@cypress/code-coverage": "~3.13.4",
+    "@testing-library/cypress": "~10.0.2",
     "@types/node": "^20.16.1",
-    "@types/uuid": "^9.0.8",
-    "cypress": "13.13.2",
-    "jsonwebtoken": "8.5.1",
-    "typescript": "5.4.5",
-    "uuid": "9.0.1",
-    "cypress-real-events": "1.13.0"
+    "@types/uuid": "^10.0.0",
+    "cypress": "~13.15.0",
+    "cypress-real-events": "~1.13.0",
+    "jose": "~5.9.4",
+    "typescript": "~5.6.3",
+    "uuid": "~10.0.0"
   },
   "scripts": {
     "test": "cypress open",
