--- a/package.json
+++ b/package.json
@@ -26,36 +26,39 @@
     "Bulin Shaqiri <bulin.shaqiri@bf.uzh.ch>"
   ],
   "devDependencies": {
-    "@prisma/nextjs-monorepo-workaround-plugin": "5.18.0",
-    "cross-env": "7.0.3",
-    "eslint-config-prettier": "9.1.0",
-    "husky": "8.0.3",
-    "prettier": "3.3.3",
-    "prettier-plugin-organize-imports": "4.0.0",
-    "prettier-plugin-tailwindcss": "0.6.6",
-    "standard-version": "9.5.0",
-    "syncpack": "11.2.1",
-    "turbo": "2.1.0",
-    "typescript": "5.4.5",
-    "yaml": "2.3.2"
+    "@prisma/nextjs-monorepo-workaround-plugin": "~5.21.1",
+    "cross-env": "~7.0.3",
+    "husky": "~9.1.6",
+    "lint-staged": "~15.2.10",
+    "npm-run-all": "~4.1.5",
+    "prettier": "~3.3.3",
+    "prettier-plugin-organize-imports": "~4.1.0",
+    "prettier-plugin-tailwindcss": "~0.6.8",
+    "standard-version": "~9.5.0",
+    "syncpack": "~13.0.0",
+    "turbo": "~2.1.3",
+    "typescript": "~5.6.3",
+    "yaml": "~2.6.0"
   },
   "scripts": {
-    "release": "standard-version",
-    "release:dry": "standard-version --dry-run",
+    "//check:app": "turbo run check --parallel --continue",
     "build": "turbo run build",
     "build:test": "cross-env NODE_ENV=test turbo run build:test --cache-dir=.turbo",
-    "check": "turbo run check --parallel --continue",
+    "check": "run-p check:*",
+    "check:format": "lint-staged",
+    "check:lint": "turbo run lint --parallel --continue",
+    "check:syncpack": "syncpack lint",
     "dev": "doppler run --config dev -- turbo run dev --concurrency 30",
+    "dev:cleverreach": "doppler run --config dev_cleverreach -- turbo run dev --concurrency 30",
     "dev:docs": "turbo run dev:docs",
     "dev:lti": "doppler run --config dev_lti -- turbo run dev:lti",
-    "dev:cleverreach": "doppler run --config dev_cleverreach -- turbo run dev --concurrency 30",
     "dev:migration": "doppler run --config dev -- turbo run dev:migration",
     "dev:offline": "doppler run --config dev -- turbo run dev:offline --concurrency 30",
     "dev:test": "cross-env NODE_ENV=test turbo run dev:test",
     "format": "prettier --write . --config .prettierrc.mjs",
     "format:check": "prettier --check . --config .prettierrc.mjs",
     "lint": "turbo run lint --parallel --continue",
-    "prepare": "husky install",
+    "prepare": "husky",
     "prisma:deploy": "pnpm run --filter @klicker-uzh/prisma prisma:deploy",
     "prisma:migrate": "pnpm run --filter @klicker-uzh/prisma prisma:migrate",
     "prisma:reset": "pnpm run --filter @klicker-uzh/prisma prisma:reset",
@@ -64,10 +67,12 @@
     "prisma:studio": "pnpm run --filter @klicker-uzh/prisma prisma:studio",
     "prune": "turbo prune",
     "publish": "turbo run publish",
+    "release": "standard-version",
     "release:alpha": "standard-version --prerelease alpha --no-verify",
     "release:alpha:dry": "standard-version --dry-run --prerelease alpha",
     "release:beta": "standard-version --prerelease beta --no-verify",
     "release:beta:dry": "standard-version --dry-run --prerelease beta",
+    "release:dry": "standard-version --dry-run",
     "release:rc": "standard-version --prerelease rc --no-verify",
     "release:rc:dry": "standard-version --dry-run --prerelease rc",
     "start": "turbo run start",
@@ -85,7 +90,7 @@
   },
   "volta": {
     "node": "20.17.0",
-    "pnpm": "9.9.0"
+    "pnpm": "9.10.0"
   },
-  "packageManager": "pnpm@9.9.0"
+  "packageManager": "pnpm@9.10.0"
 }
