--- a/packages/grading/package.json
+++ b/packages/grading/package.json
@@ -2,37 +2,31 @@
   "name": "@klicker-uzh/grading",
   "version": "3.3.0-alpha.2",
   "license": "AGPL-3.0",
-  "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
   "dependencies": {
-    "ramda": "0.29.0"
+    "remeda": "2.15.0"
   },
   "devDependencies": {
-    "@size-limit/preset-small-lib": "8.2.4",
-    "@types/jest": "^29.5.3",
+    "@types/jest": "^29.5.13",
     "@types/node": "^20.16.1",
-    "@types/ramda": "^0.29.3",
-    "cross-env": "7.0.3",
-    "eslint": "8.45.0",
-    "jest": "29.5.0",
-    "size-limit": "8.2.4",
-    "ts-jest": "29.1.0",
-    "tsup": "7.2.0",
-    "typescript": "5.4.5"
+    "cross-env": "~7.0.3",
+    "eslint": "~8.45.0",
+    "jest": "~29.7.0",
+    "ts-jest": "~29.2.5",
+    "tsup": "~8.3.0",
+    "typescript": "~5.6.3"
   },
   "scripts": {
-    "analyze": "size-limit --why",
     "build": "cross-env NODE_ENV=production tsup",
     "build:test": "pnpm run build",
     "check": "tsc --noEmit",
     "dev": "cross-env NODE_ENV=development tsup --watch",
     "dev:doppler": "doppler run --config dev -- pnpm run dev",
     "dev:offline": "pnpm run dev",
-    "size": "size-limit",
     "test": "jest"
   },
   "engines": {
@@ -41,10 +35,5 @@
   "volta": {
     "extends": "../../package.json"
   },
-  "size-limit": [
-    {
-      "path": "dist/index.js",
-      "limit": "10 KB"
-    }
-  ]
+  "type": "module"
 }
