--- a/packages/graphql/tsconfig.json
+++ b/packages/graphql/tsconfig.json
@@ -29,5 +29,6 @@
     /* If your code doesn't run in the DOM: */
     "lib": ["es2022"],
     "noErrorTruncation": true
+    // "preserveSymlinks": true
   }
 }
