--- a/.github/workflows/check-types.yml
+++ b/.github/workflows/check-types.yml
@@ -17,6 +17,7 @@ env:
   TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
   TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
   TURBO_REMOTE_ONLY: true
+  NODE_VERSION: '20.17.0' # set this to the node version to use (supports 8.x, 10.x, 12.x)
 
 jobs:
   check:
@@ -28,6 +29,14 @@ jobs:
         with:
           version: 9.10.0
           run_install: true
+
+      - name: 'Checkout GitHub Action'
+        uses: actions/checkout@v2
+
+      - name: Setup Node ${{ env.NODE_VERSION }} Environment
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ env.NODE_VERSION }}
 
       - name: Build all packages and apps
         run: |
