--- a/.github/workflows/check-types.yml
+++ b/.github/workflows/check-types.yml
@@ -28,7 +28,7 @@ jobs:
 
       - uses: pnpm/action-setup@v4
         with:
-          version: 9.10.0
+          # version: 9.10.0
           run_install: true
 
       - name: Build all packages and apps
