--- a/.github/workflows/check-types.yml
+++ b/.github/workflows/check-types.yml
@@ -17,7 +17,6 @@ env:
   TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
   TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
   TURBO_REMOTE_ONLY: true
-  NODE_VERSION: '20.17.0' # set this to the node version to use (supports 8.x, 10.x, 12.x)
 
 jobs:
   check:
@@ -28,12 +27,12 @@ jobs:
 
       - uses: pnpm/action-setup@v4
         with:
-          # version: 9.10.0
+          version: 9.10.0
           run_install: true
 
-      - name: Build all packages and apps
-        run: |
-          pnpm run build
+      # - name: Build all packages and apps
+      #   run: |
+      #     pnpm run build
 
       - name: Check prisma package typescript types
         shell: bash
