--- a/apps/frontend-pwa/tsconfig.json
+++ b/apps/frontend-pwa/tsconfig.json
@@ -11,6 +11,7 @@
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
+    "noErrorTruncation": true,
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
