--- a/packages/util/tsconfig.json
+++ b/packages/util/tsconfig.json
@@ -24,6 +24,7 @@
     "declaration": true,
     /* AND if you're building for a library in a monorepo: */
     "composite": true,
+    "tsBuildInfoFile": "dist/tsconfig.tsbuildinfo",
     "declarationMap": true,
     /* If your code doesn't run in the DOM: */
     "lib": ["es2022"]
