updates for rollup in remaining builds

--- a/apps/backend-docker/tsconfig.json
+++ b/apps/backend-docker/tsconfig.json
@@ -20,6 +20,7 @@
     "module": "NodeNext",
     "outDir": "dist",
     "sourceMap": true,
+    "tsBuildInfoFile": "dist/tsconfig.tsbuildinfo",
     /* If your code doesn't run in the DOM: */
     "lib": ["es2022"]
   }
