--- a/packages/grading/tsconfig.json
+++ b/packages/grading/tsconfig.json
@@ -10,7 +10,7 @@
     "resolveJsonModule": true,
     "moduleDetection": "force",
     "isolatedModules": true,
-    "verbatimModuleSyntax": false,
+    "verbatimModuleSyntax": true,
     /* Strictness */
     "strict": true,
     "noUncheckedIndexedAccess": true,
@@ -23,6 +23,7 @@
     "declaration": true,
     /* AND if you're building for a library in a monorepo: */
     "composite": true,
+    "tsBuildInfoFile": "dist/tsconfig.tsbuildinfo",
     "declarationMap": true,
     /* If your code doesn't run in the DOM: */
     "lib": ["es2022"]
