--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -50,6 +50,8 @@
     "@graphql-typed-document-node/core": "~3.2.0",
     "@istanbuljs/nyc-config-typescript": "~1.0.2",
     "@parcel/watcher": "~2.4.1",
+    "@rollup/plugin-node-resolve": "~15.3.0",
+    "@rollup/plugin-typescript": "~12.1.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.13",
@@ -68,8 +70,10 @@
     "jest": "~29.7.0",
     "npm-run-all": "~4.1.5",
     "nyc": "~17.1.0",
+    "rollup": "~4.24.0",
+    "rollup-plugin-copy": "~3.5.0",
+    "rollup-plugin-delete": "~2.1.0",
     "ts-jest": "~29.2.5",
-    "tsup": "~8.3.0",
     "tsx": "~4.19.1",
     "typescript": "~5.6.3",
     "web-push": "~3.6.7"
@@ -78,14 +82,14 @@
     "build": "cross-env NODE_ENV=production run-s generate build:ts",
     "build:instrument": "nyc instrument --compact=false src instrumented",
     "build:test": "run-s build:instrument build",
-    "build:ts": "tsup --dts",
+    "build:ts": "rollup -c",
     "check": "tsc --noEmit",
     "dev": "npm-run-all --parallel dev:graphql dev:ts",
     "dev:doppler": "doppler run --config dev -- pnpm run dev",
     "dev:graphql": "doppler run --config dev -- graphql-codegen --config codegen.ts --watch 'src/**.graphql' --watch 'src/**.ts'",
     "dev:offline": "pnpm run dev",
     "dev:test": "pnpm run dev",
-    "dev:ts": "cross-env NODE_ENV=development doppler run --config dev -- tsup --watch --dts",
+    "dev:ts": "cross-env NODE_ENV=development doppler run --config dev -- rollup -c --watch",
     "generate": "graphql-codegen --config codegen.ts",
     "script": "ENV=development doppler run --config dev -- tsx",
     "script:prod": "ENV=production doppler run --config prd -- tsx",
