--- a/packages/grading/package.json
+++ b/packages/grading/package.json
@@ -11,20 +11,23 @@
     "remeda": "2.15.0"
   },
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "~15.3.0",
+    "@rollup/plugin-typescript": "~12.1.1",
     "@types/jest": "^29.5.13",
     "@types/node": "^20.16.1",
     "cross-env": "~7.0.3",
     "eslint": "~8.45.0",
     "jest": "~29.7.0",
+    "rollup": "~4.24.0",
+    "rollup-plugin-delete": "~2.1.0",
     "ts-jest": "~29.2.5",
-    "tsup": "~8.3.0",
     "typescript": "~5.6.3"
   },
   "scripts": {
-    "build": "cross-env NODE_ENV=production tsup",
+    "build": "cross-env NODE_ENV=production rollup -c",
     "build:test": "pnpm run build",
     "check": "tsc --noEmit",
-    "dev": "cross-env NODE_ENV=development tsup --watch",
+    "dev": "cross-env NODE_ENV=development rollup -c --watch",
     "dev:doppler": "doppler run --config dev -- pnpm run dev",
     "dev:offline": "pnpm run dev",
     "test": "jest"
