--- a/apps/lti/tsconfig.json
+++ b/apps/lti/tsconfig.json
@@ -17,6 +17,7 @@
     /* If transpiling with TypeScript: */
     "module": "NodeNext",
     "outDir": "dist",
+    "tsBuildInfoFile": "dist/tsconfig.tsbuildinfo",
     "sourceMap": true,
     /* If your code doesn't run in the DOM: */
     "lib": ["es2022"]
