--- a/apps/backend-docker/package.json
+++ b/apps/backend-docker/package.json
@@ -44,6 +44,8 @@
   "devDependencies": {
     "@cypress/code-coverage": "~3.13.4",
     "@istanbuljs/nyc-config-typescript": "~1.0.2",
+    "@rollup/plugin-node-resolve": "~15.3.0",
+    "@rollup/plugin-typescript": "~12.1.1",
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.17",
@@ -65,8 +67,8 @@
     "npm-run-all": "~4.1.5",
     "nyc": "~17.1.0",
     "prisma": "~5.21.0",
+    "rollup": "~4.24.0",
     "source-map-support": "~0.5.21",
-    "tsup": "~8.3.0",
     "tsx": "~4.19.1",
     "typescript": "~5.6.3"
   },
@@ -74,10 +76,10 @@
     "build": "cross-env NODE_ENV=production run-s build:ts",
     "build:instrument": "nyc instrument --compact=false src instrumented",
     "build:test": "run-s build:instrument build:ts",
-    "build:ts": "tsup",
+    "build:ts": "rollup -c",
     "check": "tsc --noEmit",
     "dev": "npm-run-all --parallel dev:build dev:run",
-    "dev:build": "tsup --watch",
+    "dev:build": "rollup -c --watch",
     "dev:doppler": "doppler run --config dev -- pnpm run dev",
     "dev:lti": "pnpm run dev",
     "dev:offline": "pnpm run dev",
