--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@klicker-uzh/grading",
-  "version": "3.3.0-alpha.2",
+  "name": "@klicker-uzh/types",
+  "version": "3.1.0",
   "license": "AGPL-3.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -8,28 +8,28 @@
     "dist"
   ],
   "dependencies": {
-    "remeda": "2.15.0"
+    "@klicker-uzh/prisma": "workspace:*"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "~15.3.0",
     "@rollup/plugin-typescript": "~12.1.1",
-    "@types/jest": "^29.5.13",
     "@types/node": "^20.16.1",
     "cross-env": "~7.0.3",
-    "eslint": "~8.45.0",
-    "jest": "~29.7.0",
+    "npm-run-all": "~4.1.5",
     "rollup": "~4.24.0",
-    "ts-jest": "~29.2.5",
     "typescript": "~5.6.3"
   },
+  "peerDependencies": {
+    "remeda": "^2.15.0"
+  },
   "scripts": {
-    "build": "cross-env NODE_ENV=production rollup -c",
+    "build": "run-s build:ts",
     "build:test": "pnpm run build",
+    "build:ts": "cross-env NODE_ENV=production rollup -c",
     "check": "tsc --noEmit",
-    "dev": "cross-env NODE_ENV=development rollup -c --watch",
+    "dev": "run-p dev:ts",
     "dev:doppler": "doppler run --config dev -- pnpm run dev",
-    "dev:offline": "pnpm run dev",
-    "test": "jest"
+    "dev:ts": "cross-env NODE_ENV=development rollup -c --watch"
   },
   "engines": {
     "node": "=20"
