--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -8,15 +8,16 @@
     "dist"
   ],
   "dependencies": {
-    "@klicker-uzh/prisma": "workspace:*"
+    "@klicker-uzh/prisma": "workspace:*",
+    "@klicker-uzh/types": "workspace:*"
   },
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "~15.3.0",
+    "@rollup/plugin-typescript": "~12.1.1",
     "@types/node": "^20.16.1",
-    "autoprefixer": "~10.4.20",
     "cross-env": "~7.0.3",
-    "eslint": "~8.45.0",
     "npm-run-all": "~4.1.5",
-    "tsup": "~8.3.0",
+    "rollup": "~4.24.0",
     "typescript": "~5.6.3"
   },
   "peerDependencies": {
@@ -25,11 +26,11 @@
   "scripts": {
     "build": "run-s build:ts",
     "build:test": "pnpm run build",
-    "build:ts": "cross-env NODE_ENV=production tsup",
+    "build:ts": "cross-env NODE_ENV=production rollup -c",
     "check": "tsc --noEmit",
     "dev": "run-p dev:ts",
     "dev:doppler": "doppler run --config dev -- pnpm run dev",
-    "dev:ts": "cross-env NODE_ENV=development tsup --watch"
+    "dev:ts": "cross-env NODE_ENV=development rollup -c --watch"
   },
   "engines": {
     "node": "=20"
