instrumented should also be in tsconfig

--- a/apps/backend-docker/tsconfig.json
+++ b/apps/backend-docker/tsconfig.json
@@ -1,6 +1,5 @@
 {
-  "include": ["./src/**/*", "./scripts/**/*"],
-  "exclude": ["instrumented/"],
+  "include": ["./src/**/*", "./scripts/**/*", "./instrumented/**/*"],
   "compilerOptions": {
     "baseUrl": ".",
     /* Base Options: */
