--- a/.github/workflows/check-types.yml
+++ b/.github/workflows/check-types.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Build all packages and apps
         run: |
-          pnpm run build
+          pnpm run build:test
 
       - name: Check prisma package typescript types
         shell: bash
