--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -35,6 +35,7 @@
     "xml2js": "~0.6.2"
   },
   "peerDependencies": {
+    "@klicker-uzh/types": "workspace:*",
     "@klicker-uzh/util": "workspace:*"
   },
   "scripts": {
