--- a/apps/backend-docker/tsconfig.json
+++ b/apps/backend-docker/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["./src/**/*", "./scripts/**/*"],
+  "include": ["./src/**/*", "./scripts/**/*", "./instrumented/**/*"],
   "compilerOptions": {
     "baseUrl": ".",
     /* Base Options: */
