--- a/packages/shared-components/package.json
+++ b/packages/shared-components/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "@klicker-uzh/graphql": "workspace:*",
     "@klicker-uzh/markdown": "workspace:*",
+    "@klicker-uzh/types": "workspace:*",
     "@tailwindcss/aspect-ratio": "~0.4.2",
     "@tailwindcss/forms": "~0.5.9",
     "@tailwindcss/typography": "~0.5.15",
