--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       - './util/traefik/rules_docker.yaml:/etc/traefik/rules.yaml'
     networks:
       - klicker
+    extra_hosts:
+      - 'host.docker.internal:host-gateway'
 
   reverse_proxy_wsl:
     image: docker.io/library/traefik:v2.10
@@ -122,7 +124,6 @@ services:
     volumes:
       - klicker_data:/var/lib/postgresql/data
       - ./util/init.sql:/docker-entrypoint-initdb.d/init.sql
-
     # redis instance to support session execution
   redis_exec:
     image: docker.io/library/redis:7
