--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -14,7 +14,7 @@
     "js-cookie": "3.0.5",
     "jsonwebtoken": "9.0.2",
     "localforage": "1.10.0",
-    "next": "14.2.15",
+    "next": "15.0.0",
     "next-auth": "4.24.8",
     "next-intl": "3.21.1",
     "nookies": "2.5.2",
@@ -34,7 +34,7 @@
     "cross-env": "~7.0.3",
     "cssnano": "~6.0.1",
     "eslint": "~8.45.0",
-    "eslint-config-next": "~14.2.15",
+    "eslint-config-next": "~15.0.0",
     "postcss": "~8.4.47",
     "postcss-import": "~16.1.0",
     "prisma": "~5.21.0",
@@ -45,7 +45,7 @@
     "build": "next build",
     "build:test": "cross-env NODE_ENV=test next build",
     "check": "tsc --noEmit",
-    "dev": "next dev --port 3010",
+    "dev": "next dev --turbo --port 3010",
     "dev:doppler": "doppler run --config dev -- pnpm run dev",
     "dev:offline": "next dev --port 3010",
     "dev:test": "cross-env NODE_ENV=test next dev --port 3010",
