--- a/apps/frontend-control/package.json
+++ b/apps/frontend-control/package.json
@@ -28,7 +28,7 @@
     "js-cookie": "3.0.5",
     "jsonwebtoken": "9.0.2",
     "localforage": "1.10.0",
-    "next": "14.2.15",
+    "next": "15.0.0",
     "next-intl": "3.21.1",
     "next-pwa": "5.6.0",
     "nookies": "2.5.2",
@@ -55,7 +55,7 @@
     "cross-env": "~7.0.3",
     "cssnano": "~6.0.1",
     "eslint": "~8.45.0",
-    "eslint-config-next": "~14.2.15",
+    "eslint-config-next": "~15.0.0",
     "postcss": "~8.4.47",
     "postcss-import": "~16.1.0",
     "tailwindcss": "~3.4.14",
@@ -66,7 +66,7 @@
     "build": "next build",
     "build:test": "cross-env NODE_ENV=test next build",
     "check": "tsc --noEmit",
-    "dev": "cross-env NODE_ENV=development next dev --port 3003",
+    "dev": "cross-env NODE_ENV=development next dev --turbo --port 3003",
     "dev:doppler": "doppler run --config dev -- pnpm run dev",
     "dev:offline": "cross-env NODE_ENV=development next dev --port 3003",
     "dev:test": "cross-env NODE_ENV=test next dev --port 3003",
