--- a/apps/frontend-control/package.json
+++ b/apps/frontend-control/package.json
@@ -5,6 +5,7 @@
   "license": "AGPL-3.0",
   "dependencies": {
     "@apollo/client": "3.11.8",
+    "@ducanh2912/next-pwa": "7.3.3",
     "@fortawesome/fontawesome-svg-core": "6.6.0",
     "@fortawesome/free-regular-svg-icons": "6.6.0",
     "@fortawesome/free-solid-svg-icons": "6.6.0",
@@ -30,7 +31,6 @@
     "localforage": "1.10.0",
     "next": "15.0.0",
     "next-intl": "3.21.1",
-    "next-pwa": "5.6.0",
     "nookies": "2.5.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -51,13 +51,13 @@
     "@types/react-dom": "^18.3.1",
     "@types/web-push": "^3.6.3",
     "autoprefixer": "~10.4.20",
-    "babel-loader": "~9.2.1",
     "cross-env": "~7.0.3",
     "cssnano": "~6.0.1",
     "eslint": "~8.45.0",
     "eslint-config-next": "~15.0.0",
     "postcss": "~8.4.47",
     "postcss-import": "~16.1.0",
+    "swc-loader": "~0.2.6",
     "tailwindcss": "~3.4.14",
     "tailwindcss-radix": "~3.0.5",
     "typescript": "~5.6.3"
