--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@apollo/client": "3.11.8",
     "@azure/storage-blob": "12.25.0",
+    "@ducanh2912/next-pwa": "7.3.3",
     "@fortawesome/fontawesome-svg-core": "6.6.0",
     "@fortawesome/free-brands-svg-icons": "6.6.0",
     "@fortawesome/free-regular-svg-icons": "6.6.0",
@@ -36,7 +37,6 @@
     "lodash": "4.17.21",
     "next": "15.0.0",
     "next-intl": "3.21.1",
-    "next-pwa": "5.6.0",
     "nookies": "2.5.2",
     "react": "18.3.1",
     "react-csv-downloader": "3.1.1",
@@ -75,7 +75,6 @@
     "@types/react-dom": "^18.3.1",
     "@types/react-tagcloud": "^2.3.2",
     "autoprefixer": "~10.4.20",
-    "babel-loader": "~9.2.1",
     "cross-env": "~7.0.3",
     "cssnano": "~6.0.1",
     "eslint": "~8.45.0",
