--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -10,6 +10,7 @@
     "@capacitor/core": "5.3.0",
     "@capacitor/ios": "5.3.0",
     "@capacitor/push-notifications": "5.0.6",
+    "@ducanh2912/next-pwa": "7.3.3",
     "@fortawesome/fontawesome-svg-core": "6.6.0",
     "@fortawesome/free-regular-svg-icons": "6.6.0",
     "@fortawesome/free-solid-svg-icons": "6.6.0",
@@ -40,7 +41,6 @@
     "localforage": "1.10.0",
     "next": "15.0.0",
     "next-intl": "3.21.1",
-    "next-pwa": "5.6.0",
     "nookies": "2.5.2",
     "object-hash": "3.0.0",
     "react": "18.3.1",
@@ -65,7 +65,6 @@
     "@types/react-dom": "^18.3.1",
     "@types/web-push": "^3.6.3",
     "autoprefixer": "~10.4.20",
-    "babel-loader": "~9.2.1",
     "cross-env": "~7.0.3",
     "cssnano": "~6.0.1",
     "eslint": "~8.45.0",
