--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,22 @@ services:
     extra_hosts:
       - 'host.docker.internal:host-gateway'
 
+  reverse_proxy_macos:
+    image: docker.io/library/traefik:v2.10
+    command:
+      - --api.insecure=true
+      - --providers.file=true
+      - --providers.file.filename=/etc/traefik/rules.yaml
+      - --providers.file.watch=true
+      - --entrypoints.web.address=:80
+    ports:
+      - 80:80
+      - 8080:8080
+    volumes:
+      - './util/traefik/rules_docker.yaml:/etc/traefik/rules.yaml'
+    networks:
+      - klicker
+
   reverse_proxy_wsl:
     image: docker.io/library/traefik:v2.10
     command:
