--- a/apps/frontend-pwa/Dockerfile
+++ b/apps/frontend-pwa/Dockerfile
@@ -57,7 +57,7 @@ RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
 USER nextjs
 
-COPY --from=installer /app/apps/frontend-pwa/next.config.js .
+COPY --from=installer /app/apps/frontend-pwa/next.config.mjs .
 COPY --from=installer /app/apps/frontend-pwa/package.json .
 
 COPY --from=installer --chown=nextjs:nodejs /app/apps/frontend-pwa/.next/standalone ./
