--- a/apps/frontend-manage/Dockerfile
+++ b/apps/frontend-manage/Dockerfile
@@ -55,7 +55,7 @@ RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
 USER nextjs
 
-COPY --from=installer /app/apps/frontend-manage/next.config.js .
+COPY --from=installer /app/apps/frontend-manage/next.config.mjs .
 COPY --from=installer /app/apps/frontend-manage/package.json .
 
 COPY --from=installer --chown=nextjs:nodejs /app/apps/frontend-manage/.next/standalone ./
