--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@apollo/client": "3.11.8",
     "@azure/storage-blob": "12.25.0",
+    "@ducanh2912/next-pwa": "7.3.3",
     "@fortawesome/fontawesome-svg-core": "6.6.0",
     "@fortawesome/free-brands-svg-icons": "6.6.0",
     "@fortawesome/free-regular-svg-icons": "6.6.0",
@@ -34,9 +35,8 @@
     "js-search": "2.0.1",
     "localforage": "1.10.0",
     "lodash": "4.17.21",
-    "next": "14.2.15",
+    "next": "15.0.0",
     "next-intl": "3.21.1",
-    "next-pwa": "5.6.0",
     "nookies": "2.5.2",
     "react": "18.3.1",
     "react-csv-downloader": "3.1.1",
@@ -75,13 +75,13 @@
     "@types/react-dom": "^18.3.1",
     "@types/react-tagcloud": "^2.3.2",
     "autoprefixer": "~10.4.20",
-    "babel-loader": "~9.2.1",
     "cross-env": "~7.0.3",
     "cssnano": "~6.0.1",
     "eslint": "~8.45.0",
-    "eslint-config-next": "~14.2.15",
+    "eslint-config-next": "~15.0.0",
     "postcss": "~8.4.47",
     "postcss-import": "~16.1.0",
+    "swc-loader": "~0.2.6",
     "tailwindcss": "~3.4.14",
     "tailwindcss-radix": "~3.0.5",
     "typescript": "~5.6.3"
@@ -90,7 +90,7 @@
     "build": "next build",
     "build:test": "cross-env NODE_ENV=test next build",
     "check": "tsc --noEmit",
-    "dev": "cross-env NODE_ENV=development next dev --port 3002",
+    "dev": "cross-env NODE_ENV=development next dev --turbo --port 3002",
     "dev:doppler": "doppler run --config dev -- pnpm run dev",
     "dev:offline": "cross-env NODE_ENV=development next dev --port 3002",
     "dev:test": "cross-env NODE_ENV=test next dev --port 3002",
